--- a/src/assets/styles/vars.css
+++ b/src/assets/styles/vars.css
@@ -6,6 +6,7 @@
     --link-hover: #747bff;
     --button-link-hover: #747bff;
     --button-background: #f9f9f9;
+    --disabled-button-background: #a3a3a3;
     --divider: #262626;
 }
 
@@ -15,6 +16,7 @@
     --color: rgba(255, 255, 255, 0.87);
     --link-hover: #535bf2;
     --button-link-hover: #b5a5ff;
-    --button-background: #1a1a1a;
+    --button-background: #1565c0;
+    --disabled-button-background: #686868;
     --divider: #e5e5e5;
 }
